# openstack-ansible-os_swift_sync

./: .gitreview  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
meta/: main.yml
templates/: swift_rings_check.py.j2
tests/: ansible-role-requirements.yml  test.yml
